--- a/.coveragerc
+++ b/.coveragerc
@@ -10,12 +10,11 @@ omit =
 
 [report]
 exclude_lines =
+    pragma: no cover
     def setUp
     def test_
     return raw_input
     print
-
-
-if __name__ == "__main__":
+    if __name__ == "__main__":
     def suite
     __str__
