--- a/.coveragerc
+++ b/.coveragerc
@@ -5,13 +5,18 @@ source =
 
 omit =
     env/*
-    */test/*
+    */test*
     */__init__.py
 
 [report]
 exclude_lines = 
+    pragma: no cover
+    def setUp
     def test_
+    return raw_input
+    print
 
 
 if __name__ == "__main__":
-    unittest.main()
+    def suite:
+    __str__
