--- a/.coveragerc
+++ b/.coveragerc
@@ -14,10 +14,10 @@ exclude_lines =
     def setUp
     def test_
     return raw_input
-#    print
+    print
+    if __name__ == "__main__":
+    def suite
+    __str__
 
 
-# if __name__ == "__main__":
-#     def suite:
-#     __str__
 
